--- a/public/index.html
+++ b/public/index.html
@@ -21,7 +21,8 @@
   <link href="css/sb-admin-2.min.css" rel="stylesheet">
 
   <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
-  <script data-ad-client="ca-pub-4358965198936727" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+  <script data-ad-client="ca-pub-4358965198936727" async
+    src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 
   <!-- 
   <script src="http://code.jquery.com/jquery-1.11.2.min.js"></script>
@@ -130,6 +131,25 @@
       </li>
 
       <li class="nav-item">
+        <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseGover" aria-expanded="true"
+          aria-controls="collapseGover">
+          <i class="fas fa-fw fa-chart-area"></i>
+          <span>정부 사이트</span>
+        </a>
+        <div id="collapseGover" class="collapse" aria-labelledby="headingPages" data-parent="#accordionSidebar">
+          <div class="bg-white py-2 collapse-inner rounded">
+            <h6 class="collapse-header">유용한 정부사이트</h6>
+            <a class="collapse-item" href="http://ncov.mohw.go.kr/" target="_blank">질병관리본부</a>
+            <a class="collapse-item" href="http://www.mohw.go.kr/react/index.jsp" target="_blank">보건복지부</a>
+            <a class="collapse-item" href="http://www.mofa.go.kr/www/index.do" target="_blank">외교부</a>
+            <a class="collapse-item"
+              href="http://xn--now-po7lf48dlsm0ya109f.kr/;jsessionid=E5FEEA2989D5ED7A3DB45421EB99C178"
+              target="_blank">해외감염병now</a>
+          </div>
+        </div>
+      </li>
+
+      <li class="nav-item">
         <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseMask" aria-expanded="true"
           aria-controls="collapseMask">
           <i class="fas fa-fw fa-file-alt"></i>
@@ -139,8 +159,9 @@
           <div class="bg-white py-2 collapse-inner rounded">
             <h6 class="collapse-header">마스크 보급소 위치</h6>
             <a class="collapse-item" href="mask_post_office.html">우체국</a>
-            <a class="collapse-item" href="https://www.e-gen.or.kr/egen/search_pharmacy.do?searchType=map" target = "_blank">약국</a>
-            <a class="collapse-item" href="https://coronamask.kr/" target = "_blank">온라인 구입(코로나마스크)</a>
+            <a class="collapse-item" href="https://www.e-gen.or.kr/egen/search_pharmacy.do?searchType=map"
+              target="_blank">약국</a>
+            <a class="collapse-item" href="https://coronamask.kr/" target="_blank">온라인 구입(코로나마스크)</a>
           </div>
         </div>
       </li>
@@ -169,23 +190,24 @@
       </li>
 
       <li class="nav-item">
-        <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseSite"
-            aria-expanded="true" aria-controls="collapseSite">
-            <i class="fas fa-fw fa-file-alt"></i>
-            <span>기타 현황 사이트</span>
+        <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseSite" aria-expanded="true"
+          aria-controls="collapseSite">
+          <i class="fas fa-fw fa-file-alt"></i>
+          <span>기타 현황 사이트</span>
         </a>
-        <div id="collapseSite" class="collapse" aria-labelledby="headingUtilities"
-            data-parent="#accordionSidebar">
-            <div class="bg-white py-2 collapse-inner rounded">
-                <h6 class="collapse-header">현황,발생 추이 확인가능</h6>
-                <a class="collapse-item" href="http://livecorona.co.kr/" target="_blank">라이브 코로나맵</a>
-                <a class="collapse-item" href="https://www.coronanow.kr/" target="_blank">코로나나우</a>
-                <a class="collapse-item" href="https://wuhanvirus.kr/" target="_blank">코로나19 실시간 상황판</a>
-                <a class="collapse-item" href="https://gisanddata.maps.arcgis.com/apps/opsdashboard/index.html#/bda7594740fd40299423467b48e9ecf6" target="_blank">존 홉킨스 대학 세계 현황</a>
-                
-            </div>
+        <div id="collapseSite" class="collapse" aria-labelledby="headingUtilities" data-parent="#accordionSidebar">
+          <div class="bg-white py-2 collapse-inner rounded">
+            <h6 class="collapse-header">현황,발생 추이 확인가능</h6>
+            <a class="collapse-item" href="http://livecorona.co.kr/" target="_blank">라이브 코로나맵</a>
+            <a class="collapse-item" href="https://www.coronanow.kr/" target="_blank">코로나나우</a>
+            <a class="collapse-item" href="https://wuhanvirus.kr/" target="_blank">코로나19 실시간 상황판</a>
+            <a class="collapse-item"
+              href="https://gisanddata.maps.arcgis.com/apps/opsdashboard/index.html#/bda7594740fd40299423467b48e9ecf6"
+              target="_blank">존 홉킨스 대학 세계 현황</a>
+
+          </div>
         </div>
-    </li>
+      </li>
 
       <!-- Nav Item - Charts -->
       <li class="nav-item">
@@ -944,7 +966,7 @@
                   <h6 class="m-0 font-weight-bold text-primary">개발자의 노트</h6>
                 </div>
                 <div class="card-body">
-                  <p>'코로나 허브'는 코로나-19바이러스와 싸움에 조금이나마 도움이 되고자 만들어졌습니다. 
+                  <p>'코로나 허브'는 코로나-19바이러스와 싸움에 조금이나마 도움이 되고자 만들어졌습니다.
                     <br>원래 있던 유용한 사이트들을 한데 모아 더 빠르게 원하는 정보를 찾을 수 있도록 했고, 기존에 없던 우체국 위치 찾기는 만들어 추가하였습니다.</br>
                     알고 있는 유용한 사이트가 있거나, 공유하고 싶은 좋은 정보가 있다면 문의를 통해 제보해주시기 바랍니다.</p>
                 </div>
