--- a/public/corona_law.html
+++ b/public/corona_law.html
@@ -120,6 +120,27 @@
             </li>
 
             <li class="nav-item">
+                <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseGover"
+                    aria-expanded="true" aria-controls="collapseGover">
+                    <i class="fas fa-fw fa-chart-area"></i>
+                    <span>정부 사이트</span>
+                </a>
+                <div id="collapseGover" class="collapse" aria-labelledby="headingPages" data-parent="#accordionSidebar">
+                    <div class="bg-white py-2 collapse-inner rounded">
+                        <h6 class="collapse-header">유용한 정부사이트</h6>
+                        <a class="collapse-item"
+                            href="http://ncov.mohw.go.kr/" target="_blank">질병관리본부</a>
+                        <a class="collapse-item"
+                            href="http://www.mohw.go.kr/react/index.jsp" target="_blank">보건복지부</a>
+                        <a class="collapse-item"
+                            href="http://www.mofa.go.kr/www/index.do" target="_blank">외교부</a>
+                        <a class="collapse-item"
+                            href="http://xn--now-po7lf48dlsm0ya109f.kr/;jsessionid=E5FEEA2989D5ED7A3DB45421EB99C178" target="_blank">해외감염병now</a>
+                    </div>
+                </div>
+            </li>
+
+            <li class="nav-item">
                 <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseMask"
                     aria-expanded="true" aria-controls="collapseMask">
                     <i class="fas fa-fw fa-file-alt"></i>
