--- a/public/index.html
+++ b/public/index.html
@@ -644,9 +644,7 @@
                 </div>
                 <!-- Card Body -->
                 <div class="card-body">
-                  <div class="chart-area">
-                    <canvas id="myAreaChart"></canvas>
-                  </div>
+                  <img src= /images/corona_calendar.png width="600" height=320>
                 </div>
               </div>
             </div>
