--- a/public/index.html
+++ b/public/index.html
@@ -16,17 +16,49 @@
   <link
     href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i"
     rel="stylesheet">
-
+  
   <!-- Custom styles for this template-->
   <link href="css/sb-admin-2.min.css" rel="stylesheet">
-
+  
   <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
   <script data-ad-client="ca-pub-4358965198936727" async
     src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-
+  
   <!-- 
-  <script src="http://code.jquery.com/jquery-1.11.2.min.js"></script>
-  <script src="http://code.jquery.com/jquery-migrate-1.2.1.min.js"></script> -->
+    <script src="http://code.jquery.com/jquery-1.11.2.min.js"></script>
+    <script src="http://code.jquery.com/jquery-migrate-1.2.1.min.js"></script> -->
+  <style>
+    a {
+      text-decoration: none;
+      display: inline-block;
+      padding: 8px 16px;
+    }
+  
+    a:hover {
+      background-color: #ddd;
+      color: black;
+    }
+  
+    .previous {
+      background-color: #f1f1f1;
+      color: black;
+      position: absolute;
+      top: 50px;
+      left: 200px;
+    }
+  
+    .next {
+      background-color: #f1f1f1;
+      color: black;
+      position: absolute;
+      top: 50px;
+      right: 200px;
+    }
+  
+    .round {
+      border-radius: 50%;
+    }
+  </style>
 
 </head>
 
@@ -643,8 +675,11 @@
                   </div>
                 </div>
                 <!-- Card Body -->
-                <div class="card-body">
-                  <img src= /images/corona_calendar.png width="600" height=320>
+                <div class="card-body" style="overflow:scroll;">
+                  <a href="#" class="previous round">&#8249;</a>
+                  <a href="#" class="next round text-right">&#8250;</a>
+                  <div class = "data text-center font-weight-bold text-gray-800">날짜</div>
+                  <div class="dropdown-divider"></div>
                 </div>
               </div>
             </div>
