--- a/public/index.html
+++ b/public/index.html
@@ -16,29 +16,30 @@
   <link
     href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i"
     rel="stylesheet">
-  
+
   <!-- Custom styles for this template-->
   <link href="css/sb-admin-2.min.css" rel="stylesheet">
-  
+
   <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
   <script data-ad-client="ca-pub-4358965198936727" async
     src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-  
+
   <!-- 
     <script src="http://code.jquery.com/jquery-1.11.2.min.js"></script>
     <script src="http://code.jquery.com/jquery-migrate-1.2.1.min.js"></script> -->
+  <script src="js/demo/calendar.js"></script>
   <style>
     a {
       text-decoration: none;
       display: inline-block;
       padding: 8px 16px;
     }
-  
+
     a:hover {
       background-color: #ddd;
       color: black;
     }
-  
+
     .previous {
       background-color: #f1f1f1;
       color: black;
@@ -46,7 +47,7 @@
       top: 50px;
       left: 200px;
     }
-  
+
     .next {
       background-color: #f1f1f1;
       color: black;
@@ -54,7 +55,7 @@
       top: 50px;
       right: 200px;
     }
-  
+
     .round {
       border-radius: 50%;
     }
@@ -657,7 +658,7 @@
             <div class="col-xl-8 col-lg-7">
               <div class="card shadow mb-4">
                 <!-- Card Header - Dropdown -->
-                <div class="card-header py-1 d-flex flex-row align-items-center justify-content-between">
+                <div class="card-header py-2 d-flex flex-row align-items-center justify-content-between">
                   <h6 class="m-0 font-weight-bold text-primary">지금까지의 코로나 바이러스 사건들(제작중)</h6>
                   <div class="dropdown no-arrow">
                     <a class="dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown"
@@ -675,17 +676,29 @@
                   </div>
                 </div>
                 <!-- Card Body -->
-                <div class="card-body" style="overflow:scroll;">
-                  <a href="#" class="previous round">&#8249;</a>
-                  <a href="#" class="next round text-right">&#8250;</a>
-                  <div class = "data text-center font-weight-bold text-gray-800">날짜</div>
+                <div class="card-body">
+                  <a href="#" class="previous round" onclick="previous()">&#8249;</a>
+                  <a href="#" class="next round text-right" onclick="next()">&#8250;</a>
+                  <div class="data text-center font-weight-bold text-gray-800">
+                    <p id="date"></p>
+                    <script src="js/demo/calendar.js"></script>
+                  </div>
                   <div class="dropdown-divider"></div>
+                  <div class="text-center">
+                    <p id="action">
+                      <script src="js/demo/calendar.js"></script>
+                    </p>
+                    <br></br>
+                    <br></br>
+                    <br></br>
+                    <br>코로나-19 사건 제보는 개발자의<a href="mailto:hyuntak03.lee@gmail.com">이메일</a>로 연락주세요</br>
+                  </div>
                 </div>
               </div>
             </div>
 
             <!-- Pie Chart -->
-            <div class="col-xl-4 col-lg-6">
+            <div class="col-xl-4 col-lg-5">
               <div class="card shadow mb-4">
                 <!-- Card Header - Dropdown -->
                 <div class="card-header py-4 d-flex flex-row align-items-center justify-content-between">
