--- a/public/index.html
+++ b/public/index.html
@@ -44,7 +44,7 @@
       background-color: #f1f1f1;
       color: black;
       position: absolute;
-      top: 50px;
+      top: 60px;
       left: 200px;
     }
 
@@ -52,7 +52,7 @@
       background-color: #f1f1f1;
       color: black;
       position: absolute;
-      top: 50px;
+      top: 60px;
       right: 200px;
     }
 
@@ -659,7 +659,7 @@
               <div class="card shadow mb-4">
                 <!-- Card Header - Dropdown -->
                 <div class="card-header py-2 d-flex flex-row align-items-center justify-content-between">
-                  <h6 class="m-0 font-weight-bold text-primary">지금까지의 코로나 바이러스 사건들(제작중)</h6>
+                  <h6 class="m-0 font-weight-bold text-primary">지금까지의 코로나 바이러스 사건들</h6>
                   <div class="dropdown no-arrow">
                     <a class="dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown"
                       aria-haspopup="true" aria-expanded="false">
@@ -690,8 +690,8 @@
                     </p>
                     <br></br>
                     <br></br>
-                    <br></br>
                     <br>코로나-19 사건 제보는 개발자의<a href="mailto:hyuntak03.lee@gmail.com">이메일</a>로 연락주세요</br>
+                    <br>(모바일에서는 해상도의 문제로 잘 작동하지 않습니다)빠른 시일내 해결하도록 하겠습니다.</br>
                   </div>
                 </div>
               </div>
