--- a/public/index.html
+++ b/public/index.html
@@ -677,8 +677,8 @@
                 </div>
                 <!-- Card Body -->
                 <div class="card-body">
-                  <a href="#코로나 허브" class="previous round" onclick="previous()">&#8249;</a>
-                  <a href="#코로나 허브" class="next round text-right" onclick="next()">&#8250;</a>
+                  <a href="#a" class="previous round" onclick="previous()">&#8249;</a>
+                  <a href="#a" class="next round text-right" onclick="next()">&#8250;</a>
                   <div class="data text-center font-weight-bold text-gray-800">
                     <p id="date"></p>
                     <script src="js/demo/calendar.js"></script>
