--- a/public/index.html
+++ b/public/index.html
@@ -45,8 +45,8 @@
       background-color: #f1f1f1;
       color: black;
       position: absolute;
-      top: 50px;
-      left: 200px;
+      top: auto;
+      left: auto;
     }
 
     .next {
