--- a/public/index.html
+++ b/public/index.html
@@ -53,8 +53,8 @@
       background-color: #f1f1f1;
       color: black;
       position: absolute;
-      top: 50px;
-      right: 200px;
+      top: auto;
+      right: auto;
     }
 
     .round {
