--- a/public/index.html
+++ b/public/index.html
@@ -45,16 +45,16 @@
       background-color: #f1f1f1;
       color: black;
       position: absolute;
-      top: auto;
-      left: auto;
+      top: 12.5%;
+      left: 30%;
     }
 
     .next {
       background-color: #f1f1f1;
       color: black;
       position: absolute;
-      top: auto;
-      right: auto;
+      top: 12.5%;
+      right: 30%;
     }
 
     .round {
