--- a/public/index.html
+++ b/public/index.html
@@ -45,8 +45,8 @@
       background-color: #f1f1f1;
       color: black;
       position: absolute;
-      top: 12.5%;
-      left: 20%;
+      top: 11.5;
+      left: 10%;
     }
 
     .next {
@@ -54,7 +54,7 @@
       color: black;
       position: absolute;
       top: 12.5%;
-      right: 20%;
+      right: 10%;
     }
 
     .round {
