--- a/public/index.html
+++ b/public/index.html
@@ -45,16 +45,16 @@
       background-color: #f1f1f1;
       color: black;
       position: absolute;
-      top: 11.5;
-      left: 10%;
+      top: 50px;
+      left: 200px;
     }
 
     .next {
       background-color: #f1f1f1;
       color: black;
       position: absolute;
-      top: 11.5%;
-      right: 10%;
+      top: 50px;
+      right: 200px;
     }
 
     .round {
