--- a/public/korea_situation.html
+++ b/public/korea_situation.html
@@ -27,6 +27,7 @@
   <script src="https://code.highcharts.com/mapdata/countries/kr/kr-all.js"></script>
   <script src="data/korea_map.js"></script>
   <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
+  <script data-ad-client="ca-pub-4358965198936727" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
   <script>
     var height;
     var width;
