--- a/public/index.html
+++ b/public/index.html
@@ -663,7 +663,7 @@
               <div class="card shadow mb-4">
                 <!-- Card Header - Dropdown -->
                 <div class="card-header py-1 d-flex flex-row align-items-center justify-content-between">
-                  <h6 class="m-0 font-weight-bold text-primary">지금까지의 코로나 바이러스 사건들</h6>
+                  <h6 class="m-0 font-weight-bold text-primary" style="font-size:1.2em">지금까지의 코로나 바이러스 사건들</h6>
                   <!-- <div class="dropdown no-arrow">
                     <a class="dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown"
                       aria-haspopup="true" aria-expanded="false">
