--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,17 @@
 <meta property="og:type" content="website">
 <meta property="og:title" content="코로나 허브">
 <meta property="og:url" content="https://www.corona-hub.kr">
+
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-159935210-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-159935210-1');
+</script>
+
 <!-- <meta name="author" content="Corona-Hub"> -->
 
   <title>코로나 허브</title>
