--- a/public/index.html
+++ b/public/index.html
@@ -3,26 +3,26 @@
 
 <head>
 
-<meta charset="utf-8">
-<meta http-equiv="X-UA-Compatible" content="IE=edge">
-<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-<meta name="description" content="코로나 바이러스 정보 모음집 사이트 입니다.">
-<meta property="og:image" content="https://www.corona-hub.kr/images/main.jpeg" style="width: auto; height: auto;">
-<meta property="og:type" content="website">
-<meta property="og:title" content="코로나 허브">
-<meta property="og:url" content="https://www.corona-hub.kr">
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <meta name="description" content="코로나 바이러스 정보 모음집 사이트 입니다.">
+  <meta property="og:image" content="https://www.corona-hub.kr/images/main.jpeg" style="width: auto; height: auto;">
+  <meta property="og:type" content="website">
+  <meta property="og:title" content="코로나 허브">
+  <meta property="og:url" content="https://www.corona-hub.kr">
 
-<!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=UA-159935210-1"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-159935210-1"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
 
-  gtag('config', 'UA-159935210-1');
-</script>
+    gtag('config', 'UA-159935210-1');
+  </script>
 
-<!-- <meta name="author" content="Corona-Hub"> -->
+  <!-- <meta name="author" content="Corona-Hub"> -->
 
   <title>코로나 허브</title>
 
@@ -757,7 +757,7 @@
                     <br></br>
                     <br></br>
                     <span class="mr-2" style="font-size:1.4em">
-                      <i class='fas fa-circle text-danger' ></i> 확진자 발생률: <a id="infected_percentage"></a>
+                      <i class='fas fa-circle text-danger'></i> 확진자 발생률: <a id="infected_percentage"></a>
                     </span>
                   </div>
                   <!-- <div class="mt-4 text-center small">
@@ -974,6 +974,13 @@
                 <!-- <h6 class="m-0 font-weight-bold text-primary">국내 지역별 확진자</h6> -->
                 <!-- </div> -->
                 <div class="card-body">
+                  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+                  <!-- d -->
+                  <ins class="adsbygoogle" style="display:block" data-ad-client="ca-pub-4358965198936727"
+                    data-ad-slot="4530868572" data-ad-format="auto" data-full-width-responsive="true"></ins>
+                  <script>
+                      (adsbygoogle = window.adsbygoogle || []).push({});
+                  </script>
 
                   <!-- <div id="map" style="width:400px;height:400px;"></div> -->
                   <!-- <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey= d21bba611d5b2617ceca0bb656175c49"></script> -->
