--- a/public/mask_post_office.html
+++ b/public/mask_post_office.html
@@ -427,6 +427,9 @@
                                             //console.log(test[i])
                                             //console.log('yeahhhhh');
                                             //address += test[i] + '\n';
+                                            map.setLevel(5);
+                                            map.setCenter(lat,lon);
+                                            map.relayout();
                                             var km = (dist / 1000)
                                             var distance = km.toFixed(1);
                                             address += marker.getTitle() + " ( " + distance + "km )" + "\n";
