--- a/public/mask_post_office.html
+++ b/public/mask_post_office.html
@@ -428,7 +428,7 @@
                                             //console.log('yeahhhhh');
                                             //address += test[i] + '\n';
                                             map.setLevel(5);
-                                            map.setCenter(lat,lon);
+                                            map.setCenter(locPosition);
                                             map.relayout();
                                             var km = (dist / 1000)
                                             var distance = km.toFixed(1);
