--- a/public/mask_post_office.html
+++ b/public/mask_post_office.html
@@ -430,7 +430,7 @@
                                         });
                                         var dist = poly.getLength();
 
-                                        var marker = new kakao.maps.Marker({
+                                        var marker_1 = new kakao.maps.Marker({
                                             map: map, // 마커를 표시할 지도
                                             position: locPosition, // 마커를 표시할 위치
                                             title: "내 위치", // 마커의 타이틀, 마커에 마우스를 올리면 타이틀이 표시됩니다
