--- a/public/mask_post_office.html
+++ b/public/mask_post_office.html
@@ -386,18 +386,18 @@
                         '음봉면로 25-1','현대로 1291',' 선장로110번길 15','탕정로21번길 23','염성길 109-7', '안심로 52','계백로167번길 53-1','연산3길 4','매죽헌로1665번길 17',
                         '가야곡면 육곡길 16','광석로 106-1','마구평길 4','백일헌로 1047','성동로 283','매죽헌로 23-1','채운로 103','황화로 143','노성로 553','대둔로 821-6',
                         '번영로 45','신도안2길 63','중심상업2로 24','미원시내2길 26','팔결로 695','청암로 64',' 의암로 344-3','문의시내로 39','단재로 1426','단재로 741',
-                        '낭성시내길 12-2','청남로 1201','옥산시내1길 28','가로수로 554-1','가로수로 188-9','청남로 368','온천중앙길 8','신양로 93','가곡로 1014','내창로 171',
-                        '천등박달로 120','감노로 1403','신덕로 788','조동1길 53','쇠실로 1032','세성로 68','주치길 30','강수로 321','중앙탑길 145','미륵송계로6길 28-13',
-                        '평동로2길 9','월악로26길 18-1','주포로7길 2','시곡포전로1길 14-1','약초로 62','청풍호로 1037','청풍호로 2113']
+                                '낭성시내길 12-2', '청남로 1201', '옥산시내1길 28', '가로수로 554-1', '가로수로 188-9', '청남로 368', '온천중앙길 8', '신양로 93', '가곡로 1014', '내창로 171',
+                                '천등박달로 120', '감노로 1403', '신덕로 788', '조동1길 53', '쇠실로 1032', '세성로 68', '주치길 30', '강수로 321', '중앙탑길 145', '미륵송계로6길 28-13',
+                                '평동로2길 9', '월악로26길 18-1', '주포로7길 2', '시곡포전로1길 14-1', '약초로 62', '청풍호로 1037', '청풍호로 2113']
 
-                        var imageSrc = "http://t1.daumcdn.net/localimg/localimages/07/mapapidoc/markerStar.png"; 
-                        var imageSize = new kakao.maps.Size(24, 35); 
-    
-    // 마커 이미지를 생성합니다    
-    var markerImage = new kakao.maps.MarkerImage(imageSrc, imageSize); 
+                            var imageSrc = "http://t1.daumcdn.net/localimg/localimages/07/mapapidoc/markerStar.png";
+                            var imageSize = new kakao.maps.Size(24, 35);
 
-                    for (var i = 0; i <= 1406; i++) {
-                        geocoder.addressSearch(test[i], function (result, status) {
+                            // 마커 이미지를 생성합니다    
+                            var markerImage = new kakao.maps.MarkerImage(imageSrc, imageSize);
+
+                            for (var i = 0; i <= 1406; i++) {
+                                geocoder.addressSearch(test[i], function (result, status) {
                             //console.log(test[i])
                             //console.log(result[0].address_name)
                             // 정상적으로 검색이 완료됐으면 
@@ -436,6 +436,18 @@
                                             title: "내 위치", // 마커의 타이틀, 마커에 마우스를 올리면 타이틀이 표시됩니다
                                             image: markerImage // 마커 이미지 
                                         });
+
+                                        var iwContent = '<div style="padding:5px;">내 위치</div>', // 인포윈도우에 표출될 내용으로 HTML 문자열이나 document element가 가능합니다
+                                            iwPosition = new kakao.maps.LatLng(locPosition); //인포윈도우 표시 위치입니다
+
+                                        // 인포윈도우를 생성합니다
+                                        var infowindow = new kakao.maps.InfoWindow({
+                                            position: iwPosition,
+                                            content: iwContent
+                                        });
+
+                                        // 마커 위에 인포윈도우를 표시합니다. 두번째 파라미터인 marker를 넣어주지 않으면 지도 위에 표시됩니다
+                                        infowindow.open(map, marker_1);
                                         if (dist <= 25000) {
                                             //console.log(test[i])
                                             //console.log('yeahhhhh');
