--- a/public/index.html
+++ b/public/index.html
@@ -246,7 +246,7 @@
         <div id="collapseSite" class="collapse" aria-labelledby="headingUtilities" data-parent="#accordionSidebar">
           <div class="bg-white py-2 collapse-inner rounded">
             <h6 class="collapse-header">현황,발생 추이 확인가능</h6>
-            <a class="collapse-item" href="http://livecorona.co.kr/" target="_blank">라이브 코로나맵</a>
+            <a class="collapse-item" href="https://coronamap.site/" target="_blank">코로나맵</a>
             <a class="collapse-item" href="https://www.coronanow.kr/" target="_blank">코로나나우</a>
             <a class="collapse-item" href="https://wuhanvirus.kr/" target="_blank">코로나19 실시간 상황판</a>
             <a class="collapse-item"
