--- a/public/index.html
+++ b/public/index.html
@@ -1038,7 +1038,7 @@
                 <div class="card-body">
                   <p>'코로나 허브'는 코로나-19바이러스와 싸움에 조금이나마 도움이 되고자 만들어졌습니다.
                     <br>원래 있던 유용한 사이트들을 한데 모아 더 빠르게 원하는 정보를 찾을 수 있도록 했고, 기존에 없던 우체국 위치 찾기는 만들어 추가하였습니다.</br>
-                    알고 있는 유용한 사이트가 있거나, 공유하고 싶은 좋은 정보가 있다면 문의를 통해 제보해주시기 바랍니다.</p>
+                    알고 있는 유용한 사이트가 있거나, 공유하고 싶은 좋은 정보가 있다면 문의를 통해 제보해주시기 바랍니다.</p>아직 고등학생이라 부족한점이 많지만 앞으로 코로나 허브는 발전해가는 모습을 보여드리겠습니다.
                 </div>
               </div>
 
