--- a/public/index.html
+++ b/public/index.html
@@ -740,7 +740,7 @@
                       })
                       $.ajax({
                         type: "GET",
-                        url: "https://corona-data.herokuapp.com/die_percentage",
+                        url: "https://corona-data.herokuapp.com/die_plus",
                         dataType: "text",
                         success: function (text) {
                           console.log(text)
@@ -758,7 +758,7 @@
                     <br></br>
                     <br></br>
                     <span class="mr-2" style="font-size:1.4em">
-                      <i class='fas fa-circle text-danger'></i> 사망자: <a id="die_percentage"></a>
+                      <i class='fas fa-circle text-danger'></i> 사망자: <a id="die_plus"></a>
                     </span>
                   </div>
                   <!-- <div class="mt-4 text-center small">
